dim/spec/test_input/invalid_input/custom_attributes.dim
Config:
  - originator: CompanyName
    files:
      - test_module.dim
    category: module
Attributes:
  - attributes.dim
